syntax = "proto3";

package arcana.cloud;

option java_multiple_files = true;
option java_package = "com.arcana.cloud.grpc";
option java_outer_classname = "UserServiceProto";

import "common.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (UserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc ExistsByUsername(ExistsByUsernameRequest) returns (ExistsResponse);
  rpc ExistsByEmail(ExistsByEmailRequest) returns (ExistsResponse);
}

message GetUserRequest {
  int64 user_id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
}

message UpdateUserRequest {
  int64 user_id = 1;
  optional string username = 2;
  optional string email = 3;
  optional string password = 4;
  optional string first_name = 5;
  optional string last_name = 6;
  optional bool is_active = 7;
  optional bool is_verified = 8;
}

message DeleteUserRequest {
  int64 user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message ListUsersRequest {
  int32 page = 1;
  int32 size = 2;
}

message ListUsersResponse {
  repeated UserResponse users = 1;
  PageInfo page_info = 2;
}

message UserResponse {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string role = 6;
  bool is_active = 7;
  bool is_verified = 8;
  string created_at = 9;
  string updated_at = 10;
}

message ExistsByUsernameRequest {
  string username = 1;
}

message ExistsByEmailRequest {
  string email = 1;
}

message ExistsResponse {
  bool exists = 1;
}
